fixed issue with color for notch area on ios, added favicon and meta description

--- a/css/global.css
+++ b/css/global.css
@@ -80,6 +80,10 @@ html, body {
   height: 100dvh;
 }
 
+html {
+  background: white;
+}
+
 #header-title {
   font-size: 30px;
   margin: 0;
